force-app/main/default/objects/custom_create233__c/custom_create233__c.object-meta.xml
<CustomObject>
    <label>Custom created object233</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects233</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>