force-app/main/default/objects/custom_create233__c/fields/custom_create_233field617__c.field-meta.xml
<CustomField>
    <fullName>custom_create_233field617__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 233field617</label>
    <type>Checkbox</type>
</CustomField>